spring security 基于角色管理认真

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=ljh19950615
 
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.configuration.map-underscore-to-camel-case=true
 
 spring.redis.host=localhost
 spring.redis.timeout=3000ms
